[project]
name = "ai-telemetry"
version = "0.0.1"
description = "The codebase for some experiments and projects related to AI telemetry."
authors = [
    {name = "Vikas Gautam",email = "vikas.gautam18@gmail.com"},
    {name = "Shweta Kamath",email = "shwetkmth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
License = "MIT"
dependencies = [
    "semantic-kernel (==1.37.0)",
    "langfuse (>=3.6.1,<4.0.0)",
    "openlit (>=1.35.5,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false